deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: b-system-app-combined-h
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-system-app-combined-h
  template:
    metadata:
      labels:
        app: b-system-app-combined-h
    spec:
      containers:
        - name: b-system-combined-app1-h
          image: jp.icr.io/cti-roks-training/b-sys-combined-app1-h:latest  # app1のパイプラインで更新される
          ports:
            - name: http-app1
              containerPort: 8080
              protocol: TCP
        - name: b-system-combined-app2-h
          image: jp.icr.io/cti-roks-training/b-sys-combined-app2-h:latest  # app2のパイプラインで更新される
          ports:
            - name: http-app2
              containerPort: 8085
              protocol: TCP
      imagePullSecrets:
        - name: all-icr-io
---
kind: Service
apiVersion: v1
metadata:
  name: b-system-app-combined-h
spec:
  ports:
    - name: http-app1
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: http-app2
      port: 8085
      protocol: TCP
      targetPort: 8085
  selector:
    app: b-system-app-combined-h
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: b-system-combined-app1-h
spec:
  to:
    kind: Service
    name: b-system-app-combined-h
  tls:
    termination: edge
  port:
    targetPort: http-app1
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: b-system-combined-app2-h
spec:
  to:
    kind: Service
    name: b-system-app-combined-h
  tls:
    termination: edge
  port:
    targetPort: http-app2
